Regenerate from the solutions repository
Generated by CleanTree from CSYE7200-Solutions at e60ab23b. The last regeneration
was cb555d3 on 30 June, so this carries two months of work across, not only the
most recent.

Six files deleted. Clean copies and overwrites but never deletes, so anything
renamed or removed upstream lingers here, and four of these were breaking the
build: the per-module copies of CancelOnNotImplemented, consolidated into
shared-test on 24 August, clashed with the shared one. The others are
WhatsTheTime.scala at its old worldtimeapi path, since moved to timeapi, and
ZIOServices.scala, deleted upstream.

sample.csv had been committed here as a zero-byte file since 9 June, when a
regeneration sent it through Clean's text path and its UTF-16 content did not
survive. Verbatim copying reached .csv on 24 August; this is the first
regeneration since, and the file is now byte-identical to the source.
ProductStreamSpec reads it and passes.

Otherwise: shared-test and the new lab-sorted sorts arrive; the NaN guards in
Rational and Number are fixed; MergeSortSpec gets a pinned stack and
WordCountSpec loses its Slow tag, both from the CI work; the web crawler specs
cancel themselves when the network is unreachable; and ArchiveSpec,
MeetingScheduleSpec, ComparerSpec and SortedSpec no longer fail where they
should cancel.

Thirteen files change mode only, 100644 to 100755: Clean sets the executable
bit on everything it writes. Cosmetic, and it will recur until that is fixed.

State: lab-sorted reports two compile errors until Comparer.strComparer is
written, which is deliberate -- see the solutions README. The other eighteen
modules run 1328 tests with nothing red. With that one exercise written: 1403
tests, 291 cancellations, nothing red.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>